--- a/index.css
+++ b/index.css
@@ -148,10 +148,15 @@ button#jouer:hover {
     color: #fff;
     text-align: center;
     padding: 20px 0;
-    margin-top: 40px;
     font-size: 0.95rem;
     border-top: 1px solid #00ffe0;
+
+    /* Les lignes magiques pour le coller en bas */
+    position: relative;
+    width: 100%;
+    margin-top: auto; /* Cela va utiliser tout l'espace vide pour pousser le footer */
 }
+
 
 /* ---- ANIMATIONS ---- */
 
@@ -311,4 +316,5 @@ body.light .result,
 body.light .output {
     color: #000 !important;
     text-shadow: none;
+
 }
